Footer alignment fixed

--- a/src/components/CompanyList.css
+++ b/src/components/CompanyList.css
@@ -57,3 +57,15 @@
   padding: 25px !important;
 }
 
+.MuiTablePagination-selectLabel {
+  margin-top: 17px; /* Adjust the value as needed */
+  
+}
+
+.MuiTablePagination-displayedRows {
+  margin-top: 15px; /* Adjust the value as needed */
+}
+
+.MuiTablePagination-displayedRows {
+  margin-top: 17px; /* Adjust the value as needed */
+}
